# gf-qa-master

./: .gitignore  .gitlint  .pre-commit-config.yaml  Jenkinsfile  README.md  behave.ini  pyproject.toml  sheets.googleapis.com-python.json
.github/: pull_request_template.md
.github/workflows/: linting.yml
chromedriver/: README.md  chrome_helper.py  file_util.py
config/: client_secret.json  company_config.yml  globalparameter.py  gsheet_config.yml  patch_db_msg.yml  set_variable.py  slack_channel.yml  test_runtime.yml  test_set.yml
draft_test/00_PerformanceTest/: performance_test.py
draft_test/01_FullFunctionTest/: volume_profit_chart.py
draft_test/Bugs/: GLReportWithoutStartAndEndDate.py  README.md  nose_setup.cfg
draft_test/Setup/: reset_db.py
draft_test/helper/: unittest_tool.py
excel/BS Monthly/: Balance_sheet_2020-09-30.xlsx  Balance_sheet_2020-10-31.xlsx  Balance_sheet_2020-11-30.xlsx  Balance_sheet_2020-12-31.xlsx  Balance_sheet_2021-01-31.xlsx  Balance_sheet_2021-02-28.xlsx  Balance_sheet_2021-03-31.xlsx  Balance_sheet_2021-04-30.xlsx  Balance_sheet_2021-05-31.xlsx  Balance_sheet_2021-06-30.xlsx  Balance_sheet_2021-07-31.xlsx  Balance_sheet_2021-08-31.xlsx  Balance_sheet_2021-09-30.xlsx
excel/IS Monthly/: Income_statement (20200901-20200930).xlsx  Income_statement (20201001-20201031).xlsx  Income_statement (20201101-20201130).xlsx  Income_statement (20201201-20201231).xlsx  Income_statement (20210101-20210131).xlsx  (+8 more)
features/: environment.py
notebook/: gsheet.ipynb  hook-error.ipynb
test_trigger/: batch_trigger.py  parallel_runner.py
(+260 files in other folders)
